# Advanced-idot

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.ps1  showcase.idotp  tut.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake
docs/: example.idot
examples/: demo.idot  simple.idot
include/idotc/codegen/: compiler.hpp  ir_builder.hpp
include/idotc/lexer/: lexer.hpp  token.hpp
include/idotc/parser/: ast.hpp  parser.hpp
include/idotc/semantic/: symbol_table.hpp  type_checker.hpp
include/idotc/util/: error.hpp  source_location.hpp
src/: lib.rs  main.cpp  main.rs
src/codegen/: compiler.cpp  ir_builder.cpp  mod.rs
src/lexer/: lexer.cpp  mod.rs  token.cpp  token.rs
src/parser/: ast.cpp  mod.rs  parser.cpp
src/semantic/: mod.rs  symbol_table.cpp  type_checker.cpp
src/stdlib/: mod.rs
src/util/: error.cpp  source_location.cpp
tests/: CMakeLists.txt  lexer_tests.cpp  parser_tests.cpp
