[package]
name = "idotc"
version = "0.1.0"
edition = "2024"

[dependencies]
# inkwell = { version = "0.5", features = ["llvm18-0"], optional = true }
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7.2", features = ["fancy"] }
thiserror = "2.0"
logos = "0.14"

[features]
default = []
# codegen = ["inkwell"]
